@@ -1,3 +1,4 @@
+* Ignore balance of non-deferral move
 * Add a button to manually reapply rule engine
 
 Version 5.6.0 - 2020-05-04
